Added Python line search test

--- a/CoreFlows/examples/Python/CMakeLists.txt
+++ b/CoreFlows/examples/Python/CMakeLists.txt
@@ -96,6 +96,7 @@ CreatePythonTest(SinglePhase/SinglePhase_1DHeatedAssembly.py)
 CreatePythonTest(SinglePhase/SinglePhase_1DHeatedChannel.py)
 CreatePythonTest(SinglePhase/SinglePhase_1DRiemannProblem.py)
 CreatePythonTest(SinglePhase/SinglePhase_1DRiemannProblem_Implicit.py)
+CreatePythonTest(SinglePhase/SinglePhase_1DRiemannProblem_Implicit_LineSearch.py)
 CreatePythonTest(SinglePhase/SinglePhase_1DWaterHammer.py)
 CreatePythonTest(SinglePhase/SinglePhase_2BranchesHeatedChannels.py)
 CreatePythonTest(SinglePhase/SinglePhase_2DVidangeReservoir.py)
