--- a/CoreFlows/examples/Python/CMakeLists.txt
+++ b/CoreFlows/examples/Python/CMakeLists.txt
@@ -94,6 +94,7 @@ CreatePythonTest(IsothermalTwoFluid/IsothermalTwoFluid_2DVidangeReservoir.py)
 CreatePythonTest(SinglePhase/SinglePhase_1DDepressurisation.py)
 CreatePythonTest(SinglePhase/SinglePhase_1DHeatedAssembly.py)
 CreatePythonTest(SinglePhase/SinglePhase_1DHeatedChannel.py)
+CreatePythonTest(SinglePhase/SinglePhase_1DHeatedChannel_Implicit.py)
 CreatePythonTest(SinglePhase/SinglePhase_1DRiemannProblem.py)
 CreatePythonTest(SinglePhase/SinglePhase_1DRiemannProblem_Implicit.py)
 CreatePythonTest(SinglePhase/SinglePhase_1DRiemannProblem_Implicit_LineSearch.py)
