--- a/CDMATH/tests/examples/EulerEquations/FullEulerSystem/CMakeLists.txt
+++ b/CDMATH/tests/examples/EulerEquations/FullEulerSystem/CMakeLists.txt
@@ -1,5 +1,5 @@
 file(GLOB FullEulerEquations_EXAMPLES_TO_INSTALL 
-EulerSystem1D_HeatedChannel_Roe EulerSystem1D_RiemannProblem_Roe
+EulerSystem1D_HeatedChannel_Roe EulerSystem1D_HeatedChannel_MAC EulerSystem1D_RiemannProblem_Roe
 )
 
 install(DIRECTORY ${FullEulerEquations_EXAMPLES_TO_INSTALL} DESTINATION share/examples/EulerEquations/FullEulerEquations)
@@ -7,6 +7,7 @@ install(DIRECTORY ${FullEulerEquations_EXAMPLES_TO_INSTALL} DESTINATION share/ex
 IF (CDMATH_WITH_PYTHON AND CDMATH_WITH_PETSC AND CDMATH_WITH_POSTPRO)
     ADD_SUBDIRECTORY(EulerSystem1D_RiemannProblem_Roe)
     ADD_SUBDIRECTORY(EulerSystem1D_HeatedChannel_Roe)
+    ADD_SUBDIRECTORY(EulerSystem1D_HeatedChannel_MAC)
 ENDIF (CDMATH_WITH_PYTHON AND CDMATH_WITH_PETSC AND CDMATH_WITH_POSTPRO)
 
 
