Added python scripts for the exact solution of the Riemann problem

--- a/CDMATH/tests/validation/CMakeLists.txt
+++ b/CDMATH/tests/validation/CMakeLists.txt
@@ -99,6 +99,7 @@ WaveSystem_stationary_source/2DWaveSystemUpwindCheckerboard
 WaveSystem_stationary_source/2DWaveSystemUpwindBrickWall
 WaveSystem_stationary_source/2DWaveSystemUpwindHexagons
 WaveSystem_stationary_source/2DWaveSystemUpwindDeformedQuadrangles
+ReferenceSolutions/
 test_synthesis 
 )
 
