First convergence test foe Euler equations

--- a/CDMATH/tests/validation/CMakeLists.txt
+++ b/CDMATH/tests/validation/CMakeLists.txt
@@ -100,6 +100,7 @@ WaveSystem_stationary_source/2DWaveSystemUpwindBrickWall
 WaveSystem_stationary_source/2DWaveSystemUpwindHexagons
 WaveSystem_stationary_source/2DWaveSystemUpwindDeformedQuadrangles
 ReferenceSolutions/
+EulerEquations/1DToroBenchmark
 test_synthesis 
 )
 
