Added a new python package solverlab

--- a/CoreFlows/swig/CMakeLists.txt
+++ b/CoreFlows/swig/CMakeLists.txt
@@ -24,3 +24,23 @@ SWIG_LINK_LIBRARIES(CoreFlows ${Python_LIBRARIES} ${_extra_lib_SWIG} CoreFlowsLi
 INSTALL(TARGETS _CoreFlows DESTINATION lib/coreflows)
 INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/CoreFlows.py DESTINATION bin/coreflows)
 INSTALL(FILES ${CoreFlows_SOURCE_DIR}/mainCoreFlows.py DESTINATION bin/)
+
+if(    SOLVERLAB_WITH_PYTHON )
+  INCLUDE_DIRECTORIES(
+    ${Python_INCLUDE_DIRS}
+    ${PROJECT_BINARY_DIR}/../CDMATH/swig											    #    
+  )
+
+  file(COPY solverlab.i DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+  SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_BINARY_DIR}/solverlab.i PROPERTIES CPLUSPLUS ON)
+  SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_BINARY_DIR}/solverlab.i PROPERTIES C OFF)
+  SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_BINARY_DIR}/solverlab.i PROPERTIES SWIG_DEFINITIONS "-shadow")
+
+  SWIG_ADD_LIBRARY(solverlab TYPE SHARED LANGUAGE python SOURCES ${CMAKE_CURRENT_BINARY_DIR}/solverlab.i )
+  SWIG_LINK_LIBRARIES(solverlab ${Python_LIBRARIES} ${CDMATH_LIBRARIES} CoreFlowsLibs ${PETSC_LIBRARIES} ${SLEPC_LIBRARIES})
+
+  INSTALL(TARGETS _solverlab DESTINATION lib)
+  INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/solverlab.py DESTINATION bin)
+endif( SOLVERLAB_WITH_PYTHON )
+
+
