Added dependency of _solverlab on _cdmath and _CoreFlows

--- a/CoreFlows/swig/CMakeLists.txt
+++ b/CoreFlows/swig/CMakeLists.txt
@@ -37,6 +37,7 @@ if(    SOLVERLAB_WITH_PYTHON )
   SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_BINARY_DIR}/solverlab.i PROPERTIES SWIG_DEFINITIONS "-shadow")
 
   SWIG_ADD_LIBRARY(solverlab TYPE SHARED LANGUAGE python SOURCES ${CMAKE_CURRENT_BINARY_DIR}/solverlab.i )
+  add_dependencies(_solverlab _CoreFlows _cdmath)
   SWIG_LINK_LIBRARIES(solverlab ${Python_LIBRARIES} ${CDMATH_LIBRARIES} CoreFlowsLibs ${PETSC_LIBRARIES} ${SLEPC_LIBRARIES})
 
   INSTALL(TARGETS _solverlab DESTINATION lib)
