State dependency of solverlab swig module to cdmath and coreflows swig modules

--- a/CoreFlows/swig/CMakeLists.txt
+++ b/CoreFlows/swig/CMakeLists.txt
@@ -38,7 +38,7 @@ if(    SOLVERLAB_WITH_PYTHON )
 
   SWIG_ADD_LIBRARY(solverlab TYPE SHARED LANGUAGE python SOURCES ${CMAKE_CURRENT_BINARY_DIR}/solverlab.i )
   add_dependencies(_solverlab _CoreFlows _cdmath)
-  SWIG_LINK_LIBRARIES(solverlab ${Python_LIBRARIES} ${CDMATH_LIBRARIES} CoreFlowsLibs ${PETSC_LIBRARIES} ${SLEPC_LIBRARIES})
+  SWIG_LINK_LIBRARIES(solverlab ${Python_LIBRARIES} _cdmath _CoreFlows ${CDMATH_LIBRARIES} CoreFlowsLibs ${PETSC_LIBRARIES} ${SLEPC_LIBRARIES})
 
   INSTALL(TARGETS _solverlab DESTINATION lib)
   INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/solverlab.py DESTINATION bin)
