Trying to allow compilation on five proc

--- a/CoreFlows/swig/CMakeLists.txt
+++ b/CoreFlows/swig/CMakeLists.txt
@@ -35,6 +35,11 @@ if(    SOLVERLAB_WITH_PYTHON )
   SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_BINARY_DIR}/solverlab.i PROPERTIES CPLUSPLUS ON)
   SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_BINARY_DIR}/solverlab.i PROPERTIES C OFF)
   SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_BINARY_DIR}/solverlab.i PROPERTIES SWIG_DEFINITIONS "-shadow")
+  SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_BINARY_DIR}/solverlab.i PROPERTIES DEPENDS _cdmath)
+  SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_BINARY_DIR}/solverlab.i PROPERTIES DEPENDS _CoreFlows)
+  SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_BINARY_DIR}/solverlab.i PROPERTIES USE_SWIG_DEPENDENCIES ON)
+
+  SET(USE_SWIG_DEPENDENCIES TRUE)
 
   SWIG_ADD_LIBRARY(solverlab TYPE SHARED LANGUAGE python SOURCES ${CMAKE_CURRENT_BINARY_DIR}/solverlab.i )
   add_dependencies(_solverlab _CoreFlows _cdmath)
