Simplified the creation of solverlab python module

--- a/CoreFlows/swig/CMakeLists.txt
+++ b/CoreFlows/swig/CMakeLists.txt
@@ -37,13 +37,9 @@ if(    SOLVERLAB_WITH_PYTHON )
   SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_BINARY_DIR}/solverlab.i PROPERTIES SWIG_DEFINITIONS "-shadow")
   SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_BINARY_DIR}/solverlab.i PROPERTIES DEPENDS _cdmath)
   SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_BINARY_DIR}/solverlab.i PROPERTIES DEPENDS _CoreFlows)
-  SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_BINARY_DIR}/solverlab.i PROPERTIES USE_SWIG_DEPENDENCIES ON)
-
-  SET(USE_SWIG_DEPENDENCIES TRUE)
 
   SWIG_ADD_LIBRARY(solverlab TYPE SHARED LANGUAGE python SOURCES ${CMAKE_CURRENT_BINARY_DIR}/solverlab.i )
-  add_dependencies(_solverlab _CoreFlows _cdmath)
-  SWIG_LINK_LIBRARIES(solverlab ${Python_LIBRARIES} _cdmath _CoreFlows ${CDMATH_LIBRARIES} CoreFlowsLibs ${PETSC_LIBRARIES} ${SLEPC_LIBRARIES})
+  SWIG_LINK_LIBRARIES(solverlab ${Python_LIBRARIES} ${CDMATH_LIBRARIES} CoreFlowsLibs ${PETSC_LIBRARIES} ${SLEPC_LIBRARIES})
 
   INSTALL(TARGETS _solverlab DESTINATION lib)
   INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/solverlab.py DESTINATION bin)
