Renamed variable Paraview_ubuntu_20 as preload_netcdf_on_ubuntu20

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -569,20 +569,20 @@ string(REPLACE ":" ";"  PV_PYTHON_DIR_PATHS "${PV_PYTHON_DIR}")# use semicolon i
 find_file(python-paraview simple.py PATHS ${PV_PYTHON_DIR_PATHS})
 if( ${python-paraview} STREQUAL "python-paraview-NOTFOUND" )
   message(WARNING "Python Paraview library not found. Post processing will fail in SOLVERLAB scripts.")
-  set(PARAVIEW_ON_UBUNTU20 OFF)
+  set(PRELOAD_NETCDF_ON_UBUNTU20 OFF)
 else( ${python-paraview} STREQUAL "python-paraview-NOTFOUND" )
   if(    ${python-paraview} STREQUAL "/usr/lib/python3/dist-packages/paraview/simple.py" )
     message ( STATUS "Using system Paraview python libraries on Ubuntu 20.04 requires the presence and preload of library netcdf (bug in linkage)." )
     if(    EXISTS "/usr/lib/x86_64-linux-gnu/libnetcdf.so" )
       message ( STATUS "Library netcdf found in the system. Paraview python libraries should be functional." )
-      set(PARAVIEW_ON_UBUNTU20 ON)
+      set(PRELOAD_NETCDF_ON_UBUNTU20 ON)
     else(  EXISTS "/usr/lib/x86_64-linux-gnu/libnetcdf.so" )
       message ( WARNING "Library netcdf not found in system. Paraview python libraries may not be functional (bug in linkage)." )
-      set(PARAVIEW_ON_UBUNTU20 OFF)
+      set(PRELOAD_NETCDF_ON_UBUNTU20 OFF)
     endif( EXISTS "/usr/lib/x86_64-linux-gnu/libnetcdf.so" )
   else(  ${python-paraview} STREQUAL "/usr/lib/python3/dist-packages/paraview/simple.py" )
     message(STATUS "Python Paraview library found. Post processing will work in SOLVERLAB scripts.")
-    set(PARAVIEW_ON_UBUNTU20 OFF)
+    set(PRELOAD_NETCDF_ON_UBUNTU20 OFF)
   endif( ${python-paraview} STREQUAL "/usr/lib/python3/dist-packages/paraview/simple.py" )
 endif( ${python-paraview} STREQUAL "python-paraview-NOTFOUND" )
 
